feat: add crossseed search to torrentcontextmenu
